    - Fixed a bug that could cause GPU exceptions when minimizing a fullscreen
      Vulkan application on certain desktops, such as Plasma.

  [ Andreas Beckmann ]
  * Update nv-readme.ids.
  * dkms.conf: Use a BUILD_EXCLUSIVE equivalent hack to skip building for -rt
    kernels, not supported upstream.
  * Declare Testsuite: autopkgtest-pkg-dkms.

 -- Andreas Beckmann <anbe@debian.org>  Tue, 15 Feb 2022 18:41:43 +0100

nvidia-graphics-drivers (510.47.03-1) experimental; urgency=medium

  * New upstream production branch release 510.47.03 (2022-02-01).
    * Fixed CVE‑2022‑21813, CVE‑2022‑21814.  (Closes: #1004847)
      https://nvidia.custhelp.com/app/answers/detail/a_id/5312
    - Added support for Vulkan 1.3.
  * New upstream beta 510.39.01 (2022-01-11).
    - Added a new daemon, nvidia-powerd, to provide support for
      the Dynamic Boost feature on supported systems. Dynamic Boost
      balances power between the CPU and the GPU for improved performance.
      For more details, see the "Dynamic Boost on Linux" chapter in the README.
    - Updated nvidia-bug-report.sh to search the systemd journal for
      nvidia-powerd logs.
    - Fixed several issues which caused the supported-gpus.json file to
      contain incorrect product information.
    - Added a new module parameter, "peerdirect_support", to the
      nvidia-peermem.ko kernel module, to correctly support GPUDirect RDMA on
      MOFED 5.0 and older releases.
    - Fixed a bug which caused Vulkan applications to hang when the
      __GL_THREADED_OPTIMIZATIONS environment variable was set to enable
      threaded optimizations in the NVIDIA driver.
    - Fixed a bug where calls to vkWaitForPresentKHR would fail with
      VK_TIMEOUT on Maxwell and Pascal GPUs.
    - Added support for the VK_EXT_depth_clip_control extension.
    - Added support for the VK_EXT_border_color_swizzle extension.
    - Added support for the VK_EXT_image_view_min_lod extension.