@@ -9,6 +9,7 @@ nvidia-graphics-drivers (510.54-1) UNRELEASED; urgency=medium
   * dkms.conf: Use a BUILD_EXCLUSIVE equivalent hack to skip building for -rt
     kernels, not supported upstream.
   * Declare Testsuite: autopkgtest-pkg-dkms.
+  * Disable building nvidia-cuda-mps.
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 15 Feb 2022 18:41:43 +0100
 
